[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "ivangrana",email = "ivan.grana@dgtallab.com.br"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "agno (>=2.2.1,<3.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "ollama (>=0.6.0,<0.7.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
